--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@
         <itextpdf5.version>5.5.9</itextpdf5.version>
         <java.version>1.8</java.version>
         <javamoney.version>1.1</javamoney.version>
-        <jackson-datatype-money.version>0.8.0</jackson-datatype-money.version>
+        <jackson-datatype-money.version>0.9.0</jackson-datatype-money.version>
         <javaparser.version>2.2.1</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
         <jansi.version>1.12</jansi.version>
@@ -167,7 +167,7 @@
         <jcip.version>1.0</jcip.version>
         <jest.version>0.1.7</jest.version>
         <jgravatar.version>1.0</jgravatar.version>
-        <jadira.usertype.version>5.0.1.GA-SNAPSHOT</jadira.usertype.version>
+        <jadira.usertype.version>5.0.0.GA</jadira.usertype.version>
         <jmeter.maven.plugin.version>1.10.1</jmeter.maven.plugin.version>
         <jquery.webjars.version>1.11.2</jquery.webjars.version>
         <jqueryui.webjars.version>1.11.4</jqueryui.webjars.version>
@@ -274,6 +274,8 @@
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
         <tika.parsers.version>1.13</tika.parsers.version>
         <thymeleaf-layout-dialect.version>1.4.0</thymeleaf-layout-dialect.version>
+        <!--thymeleaf.version>3.0.1.RELEASE</thymeleaf.version>
+        <thymeleaf-layout-dialect.version>2.0.1</thymeleaf-layout-dialect.version-->
         <thymeleaf-jawr.version>1.2.1</thymeleaf-jawr.version>
         <twilio.sdk.version>6.3.0</twilio.sdk.version>
         <wagon.version>2.9</wagon.version>
@@ -841,15 +843,15 @@
                 <version>${supercsv.version}</version>
             </dependency>
             <dependency>
-            <groupId>org.jadira.usertype</groupId>
-            <artifactId>usertype.core</artifactId>
-            <version>${jadira.usertype.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jadira.usertype</groupId>
-            <artifactId>usertype.extended</artifactId>
-            <version>${jadira.usertype.version}</version>
-        </dependency>
+                <groupId>org.jadira.usertype</groupId>
+                <artifactId>usertype.core</artifactId>
+                <version>${jadira.usertype.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jadira.usertype</groupId>
+                <artifactId>usertype.extended</artifactId>
+                <version>${jadira.usertype.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.codeborne</groupId>
                 <artifactId>phantomjsdriver</artifactId>
