--- a/pom.xml
+++ b/pom.xml
@@ -1661,6 +1661,8 @@
                                     <excludes>
                                         <!--exclude>commons-lang:commons-lang</exclude-->
                                         <exclude>commons-logging:commons-logging</exclude>
+                                        <!--exclude>com.google.code.gson:gson</exclude>
+                                        <exclude>org.codehaus.jackson</exclude-->
                                         <!--exclude>commons-collections:commons-collections</exclude-->
                                     </excludes>
                                 </bannedDependencies>
