Update the maven site skin version

--- a/pom.xml
+++ b/pom.xml
@@ -1922,8 +1922,8 @@
                             <useManifestOnlyJar>false</useManifestOnlyJar>
                             <useSystemClassLoader>true</useSystemClassLoader>
                             <trimStackTrace>false</trimStackTrace>
-                            <parallel>${failsafe.parallel}</parallel>
-                            <useUnlimitedThreads>${failsafe.useUnlimitedThreads}</useUnlimitedThreads>
+                            <!--parallel>${failsafe.parallel}</parallel>
+                            <useUnlimitedThreads>${failsafe.useUnlimitedThreads}</useUnlimitedThreads-->
                             <includes>
                                 <include>**/*IntegrationTest.java</include>
                             </includes>
