Update changelog, add localCheckout=true and push changes=false.

--- a/pom.xml
+++ b/pom.xml
@@ -1497,6 +1497,8 @@
                         <useReleaseProfile>false</useReleaseProfile>
                         <goals>deploy</goals>
                         <scmCommentPrefix>[maven-release-plugin][ci skip]</scmCommentPrefix>
+                        <localCheckout>true</localCheckout>
+                        <pushChanges>false</pushChanges>
                     </configuration>
                 </plugin>
                 <plugin>
