--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Athens-BUILD-SNAPSHOT</version>
+        <version>Athens-RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -120,18 +120,17 @@
     </distributionManagement>
 
     <properties>
-        <amazon.aws.sdk.version>1.10.73
-        </amazon.aws.sdk.version> <!-- Do not Update, waiting on: https://github.com/abashev/vfs-s3/issues/36 -->
+        <amazon.aws.sdk.version>1.11.37</amazon.aws.sdk.version>
         <asciidoctor.version>1.5.3</asciidoctor.version>
         <asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
         </checkstyle.violation.ignore>
-        <codemodel.version>2.8.5</codemodel.version>
+        <codemodel.version>2.8.6</codemodel.version>
         <codemirror.webjars.version>5.1</codemirror.webjars.version>
         <commons.collections4.version>4.1</commons.collections4.version>
         <commons.vfs2.version>2.1.1660580.2</commons.vfs2.version>
-        <commons.vfs2.s3.version>2.3.3</commons.vfs2.s3.version>
+        <commons.vfs2.s3.version>2.4.0</commons.vfs2.s3.version>
         <commons.vfs2.azure.version>1.2.patched</commons.vfs2.azure.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
         <compile-testing.version>0.9</compile-testing.version>
@@ -144,7 +143,7 @@
         <failsafe.useUnlimitedThreads />
         <fontawesome.webjars.version>4.6.3</fontawesome.webjars.version>
         <!-- Remove when https://github.com/spring-projects/spring-boot/issues/5296 is done -->
-        <flyway.version>4.0.1</flyway.version>
+        <flyway.version>4.0.3</flyway.version>
         <geotools.version>15.0</geotools.version>
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
@@ -153,13 +152,13 @@
         <hibernate.version>5.1.2.Final</hibernate.version>
         <hibernate.hydrate.version>2.3</hibernate.hydrate.version>
         <!-- Remove once boot updates -->
-        <hazelcast.version>3.7-EA</hazelcast.version>
+        <hazelcast.version>3.7.1</hazelcast.version>
         <hazelcast.hibernate.version>1.0</hazelcast.hibernate.version>
         <infinispan.version>8.1.0.Final</infinispan.version>
         <itextpdf5.version>5.5.9</itextpdf5.version>
         <java.version>1.8</java.version>
         <javamoney.version>1.1</javamoney.version>
-        <jackson-datatype-money.version>0.9.0</jackson-datatype-money.version>
+        <jackson-datatype-money.version>0.10.0</jackson-datatype-money.version>
         <javaparser.version>2.2.1</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
         <jansi.version>1.12</jansi.version>
@@ -169,8 +168,8 @@
         <jgravatar.version>1.0</jgravatar.version>
         <jadira.usertype.version>5.0.0.GA</jadira.usertype.version>
         <jmeter.maven.plugin.version>1.10.1</jmeter.maven.plugin.version>
-        <jquery.webjars.version>1.11.2</jquery.webjars.version>
-        <jqueryui.webjars.version>1.11.4</jqueryui.webjars.version>
+        <jquery.webjars.version>1.12.1</jquery.webjars.version>
+        <jqueryui.webjars.version>1.12.1</jqueryui.webjars.version>
         <jquerymobile.webjars.version>1.4.5</jquerymobile.webjars.version>
         <jquerymobile.spinbox.webjars.version>1.4.4</jquerymobile.spinbox.webjars.version>
         <jquerymobile.autocomplete.webjars.version>1.5.2-1</jquerymobile.autocomplete.webjars.version>
@@ -234,11 +233,11 @@
         <maven.resource.plugin.version>2.7</maven.resource.plugin.version>
         <maven.plugin.annotations.version>3.3</maven.plugin.annotations.version>
         <nemesis.version>1.4.0.BUILD-SNAPSHOT</nemesis.version>
-        <opencmis.version>0.14.0</opencmis.version>
+        <opencmis.version>1.0.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
         <oracle.version>12.1.0.2</oracle.version>
         <orika.version>1.5.0-SNAPSHOT</orika.version>
-        <paypal.sdk.version>2.14.117</paypal.sdk.version>
+        <paypal.sdk.version>2.15.121</paypal.sdk.version>
         <proguard.version>5.2.1</proguard.version>
         <proguard.maven.plugin.version>2.0.11</proguard.maven.plugin.version>
         <proguard.maven.plugin.skip>true</proguard.maven.plugin.skip>
@@ -252,7 +251,7 @@
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
         <reflections.version>0.9.10</reflections.version>
         <redis.embedded.version>0.6</redis.embedded.version>
-        <riskified.version>1.0.1.7</riskified.version>
+        <riskified.version>1.0.2.1</riskified.version>
         <selenium.version>2.47.0</selenium.version>
         <smartsprites.version>0.2.12</smartsprites.version>
         <slick.webjars.version>1.6.0</slick.webjars.version>
@@ -270,7 +269,7 @@
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
-        <stripe.api.version>1.48.0</stripe.api.version>
+        <stripe.api.version>2.10.0</stripe.api.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
         <tika.parsers.version>1.13</tika.parsers.version>
         <thymeleaf-layout-dialect.version>1.4.0</thymeleaf-layout-dialect.version>
@@ -476,7 +475,7 @@
                 <version>${commons.vfs2.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.intridea.io</groupId>
+                <groupId>com.github</groupId>
                 <artifactId>vfs-s3</artifactId>
                 <version>${commons.vfs2.s3.version}</version>
             </dependency>
