--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,8 @@
     </distributionManagement>
 
     <properties>
-        <amazon.aws.sdk.version>1.11.37</amazon.aws.sdk.version>
+        <amazon.aws.sdk.version>1.10.73
+        </amazon.aws.sdk.version> <!-- Do not Update, waiting on: https://github.com/abashev/vfs-s3/issues/36 -->
         <asciidoctor.version>1.5.3</asciidoctor.version>
         <asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
@@ -130,7 +131,7 @@
         <codemirror.webjars.version>5.1</codemirror.webjars.version>
         <commons.collections4.version>4.1</commons.collections4.version>
         <commons.vfs2.version>2.1.1660580.2</commons.vfs2.version>
-        <commons.vfs2.s3.version>2.4.0</commons.vfs2.s3.version>
+        <commons.vfs2.s3.version>2.3.3</commons.vfs2.s3.version>
         <commons.vfs2.azure.version>1.2.patched</commons.vfs2.azure.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
         <compile-testing.version>0.9</compile-testing.version>
@@ -475,7 +476,7 @@
                 <version>${commons.vfs2.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github</groupId>
+                <groupId>com.intridea.io</groupId>
                 <artifactId>vfs-s3</artifactId>
                 <version>${commons.vfs2.s3.version}</version>
             </dependency>
