--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,7 @@
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe.api.version>2.10.0</stripe.api.version>
+        <klarna.sdk.version>2.2.0</klarna.sdk.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
         <tika.parsers.version>1.13</tika.parsers.version>
         <thymeleaf-layout-dialect.version>1.4.0</thymeleaf-layout-dialect.version>
@@ -866,6 +867,11 @@
                 <groupId>com.stripe</groupId>
                 <artifactId>stripe-java</artifactId>
                 <version>${stripe.api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.klarna</groupId>
+                <artifactId>kco-rest</artifactId>
+                <version>${klarna.sdk.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.paypal.sdk</groupId>
