--- a/pom.xml
+++ b/pom.xml
@@ -1706,8 +1706,8 @@
                                         <!--exclude>commons-lang:commons-lang</exclude-->
                                         <exclude>commons-logging:commons-logging</exclude>
                                         <!--exclude>com.google.guava:guava</exclude-->
-                                        <!--exclude>com.google.code.gson:gson</exclude>
-                                        <exclude>org.codehaus.jackson</exclude-->
+                                        <!--exclude>com.google.code.gson:gson</exclude-->
+                                        <!--exclude>org.codehaus.jackson</exclude-->
                                         <!--exclude>commons-collections:commons-collections</exclude-->
                                     </excludes>
                                 </bannedDependencies>
