--- a/pom.xml
+++ b/pom.xml
@@ -1043,6 +1043,11 @@
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.nemesis.platform.module.wms</groupId>
+                <artifactId>nemesis-module-peoplevox</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.nemesis.platform.module</groupId>
                 <artifactId>nemesis-module-customerreview</artifactId>
                 <version>${nemesis.version}</version>
