--- a/pom.xml
+++ b/pom.xml
@@ -153,8 +153,8 @@
         <hibernate.version>5.1.2.Final</hibernate.version>
         <hibernate.hydrate.version>2.3</hibernate.hydrate.version>
         <!-- Remove once boot updates -->
-        <hazelcast.version>3.7.1</hazelcast.version>
-        <hazelcast.hibernate.version>1.0</hazelcast.hibernate.version>
+        <hazelcast.version>3.7.2</hazelcast.version>
+        <hazelcast.hibernate.version>1.1</hazelcast.hibernate.version>
         <infinispan.version>8.1.0.Final</infinispan.version>
         <itextpdf5.version>5.5.9</itextpdf5.version>
         <java.version>1.8</java.version>
@@ -255,6 +255,7 @@
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
         <reflections.version>0.9.10</reflections.version>
         <redis.embedded.version>0.6</redis.embedded.version>
+        <redis.hibernate.version>2.3.2</redis.hibernate.version>
         <riskified.version>1.0.2.1</riskified.version>
         <selenium.version>2.47.0</selenium.version>
         <smartsprites.version>0.2.12</smartsprites.version>
@@ -807,6 +808,11 @@
                 <version>${redis.embedded.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.github.debop</groupId>
+                <artifactId>hibernate-redis</artifactId>
+                <version>${redis.hibernate.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>slick</artifactId>
                 <version>${slick.webjars.version}</version>
@@ -995,6 +1001,11 @@
             <dependency>
                 <groupId>com.nemesis.platform.module.cache</groupId>
                 <artifactId>nemesis-module-hazelcast</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module.cache</groupId>
+                <artifactId>nemesis-module-redis</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
