--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
         <google.geocoder.version>0.16</google.geocoder.version>
         <gridgain.version>6.6.9</gridgain.version>
         <guava.version>19.0</guava.version>
-        <hibernate.version>5.1.2.Final</hibernate.version>
+        <hibernate.version>5.1.3.Final</hibernate.version>
         <hibernate.hydrate.version>2.3</hibernate.hydrate.version>
         <!-- Remove once boot updates -->
         <hazelcast.version>3.7.2</hazelcast.version>
@@ -210,7 +210,7 @@
         <maven.coveralls.plugin.version>3.1.0</maven.coveralls.plugin.version>
         <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
         <maven.jacoco.plugin.version>0.7.5.201505241946</maven.jacoco.plugin.version>
-        <maven.site.plugin.version>3.5.1</maven.site.plugin.version>
+        <maven.site.plugin.version>3.6</maven.site.plugin.version>
         <maven.failsafe.plugin.version>2.19</maven.failsafe.plugin.version>
         <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
         <maven.remote.resources.plugin.version>1.4</maven.remote.resources.plugin.version>
@@ -1502,7 +1502,7 @@
                         <inputEncoding>UTF-8</inputEncoding>
                         <outputEncoding>UTF-8</outputEncoding>
                         <attributes>
-                            <generated>${basedir}/target/asciidoc/generated</generated>
+                            <generated>${project.build.directory}/generated-site/asciidoc/</generated>
                         </attributes>
                         <asciidoc>
                             <requires>
