--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,7 @@
         <bootstrap-slider.webjars.version>7.1.0</bootstrap-slider.webjars.version>
         <pace.webjars.version>1.0.2</pace.webjars.version>
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
-        <!--spring.cloud.version>Brixton.M2</spring.cloud.version-->
+        <!--spring.cloud.version>Camden.SR3</spring.cloud.version-->
         <spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version>
         <spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version>
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
