--- a/pom.xml
+++ b/pom.xml
@@ -270,7 +270,7 @@
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <!--spring.cloud.version>Camden.SR3</spring.cloud.version-->
         <spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version>
-        <spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version>
+        <spring-data-releasetrain.version>Ingalls-RC1</spring-data-releasetrain.version>
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
