--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
         <version>Athens-SR1</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <groupId>com.nemesis</groupId>
     <artifactId>bom</artifactId>
-    <version>1.4.0.BUILD-SNAPSHOT</version>
+    <version>1.4.0.RELEASE</version>
     <packaging>pom</packaging>
 
     <name>Nemesis BOM</name>
@@ -82,7 +82,7 @@
         <connection>scm:git:git@github.com:nemesis-software/nemesis-bom.git</connection>
         <developerConnection>scm:git:git@github.com:nemesis-software/nemesis-bom.git</developerConnection>
         <url>https://github.com/nemesis-software/nemesis-bom.git</url>
-        <tag>0.9</tag>
+        <tag>1.4.0.RELEASE</tag>
     </scm>
     <issueManagement>
         <system>Github</system>
