--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,7 @@
         <spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version-->
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
+        <spring-restdocs.version>1.2.0.BUILD-SNAPSHOT</spring-restdocs.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe.api.version>2.10.0</stripe.api.version>
         <klarna.sdk.version>2.2.0</klarna.sdk.version>
