--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Brussels-BUILD-SNAPSHOT</version>
+        <version>Brussels-RC1</version>
         <relativePath/>
     </parent>
 
