--- a/pom.xml
+++ b/pom.xml
@@ -236,7 +236,7 @@
         <opencmis.version>1.0.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
         <oracle.version>12.1.0.2</oracle.version>
-        <orika.version>1.5.0</orika.version>
+        <orika.version>1.5.1-SNAPSHOT</orika.version>
         <paypal.sdk.version>2.15.121</paypal.sdk.version>
         <proguard.version>5.2.1</proguard.version>
         <proguard.maven.plugin.version>2.0.11</proguard.maven.plugin.version>
