--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 
     <properties>
         <amazon.aws.sdk.version>1.11.9</amazon.aws.sdk.version>
-        <asciidoctor.version>1.5.3</asciidoctor.version>
+        <asciidoctor.version>1.5.4-NEMESIS-RELEASE</asciidoctor.version>
         <asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
@@ -232,6 +232,7 @@
         <maven-jasmine-plugin.version>1.3.1.5</maven-jasmine-plugin.version>
         <maven-plugin-api.version>3.2.2</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
+        <maven-site-plugin.version>3.7-SNAPSHOT</maven-site-plugin.version>
         <nemesis.version>1.5.0.BUILD-SNAPSHOT</nemesis.version>
         <opencmis.version>1.0.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
@@ -1518,7 +1519,7 @@
                                 <last-update-label>false</last-update-label>
                                 <language>asciidoc</language>
                                 <imagesdir>images</imagesdir>
-                                <imagesoutdir>${basedir}/target/site/images/</imagesoutdir>
+                                <imagesoutdir>${project.build.directory}/site/images/</imagesoutdir>
                                 <source-highlighter>coderay</source-highlighter>
                                 <coderay-css>style</coderay-css>
                                 <toclevels>2</toclevels>
