--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
         <jstree.bootstrap.theme.version>1.0.1</jstree.bootstrap.theme.version>
         <jetty.version>9.3.6.v20151106</jetty.version>
         <jedis.version>2.9.0</jedis.version>
-        <maven-archetype-plugin.version>2.4</maven-archetype-plugin.version>
+        <maven-archetype-plugin.version>3.0.1-NEMESIS-RELEASE</maven-archetype-plugin.version>
         <maven.filtering.version>1.3</maven.filtering.version>
         <maven-war-plugin.version>2.4</maven-war-plugin.version>
         <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
